Fix spacing about navigational menu

--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -10,7 +10,7 @@
   list-style-type: none;
   padding: 0;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 0;
   margin-right: 80px;
 }
 
